--- a/styles/style.css
+++ b/styles/style.css
@@ -1,2 +1,71 @@
 /* Googole Font */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto&display=swap');
+
+/* commom styles */
+body{
+    font-family: 'Poppins';
+}
+main{
+    margin: 50px 120px;
+}
+/* ===============
+Top section start 
+================== */
+.top {
+    display: flex;
+    background-color: #161616;
+    border-radius: 30px;
+    height: 646px;
+   
+}
+.top-section{
+    width: 45%;
+}
+.top-contant {
+    margin-left: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.top-heading {
+    font-weight: 700;
+    font-size: 70px;
+    line-height: 80px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+
+    color: #FFFFFF;
+}
+
+.top-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #FFFFFF;
+}
+
+.top-btn button {
+    padding: 16px 25px;
+    color: #FFFFFF;
+    background-color: #DD0000;
+    border-radius: 5px;
+    border: none;
+    margin-top: 15px;
+}
+
+.top-btn button i{
+    margin-left: 10px;
+}
+.top-img {
+    margin-right: 60px;
+    display: flex;
+    align-items: flex-end;
+
+}
+.top-img img{
+    width: 100%;
+    height: 90%;
+}
+ 
