--- a/styles/style.css
+++ b/styles/style.css
@@ -2,12 +2,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto&display=swap');
 
 /* commom styles */
-body{
+body {
     font-family: 'Poppins';
+    margin: 0;
+
 }
-main{
-    margin: 50px 110px;
+
+main {
+    margin: 50px 10%;
 }
+
 /* ===============
 Top section start 
 ================== */
@@ -16,11 +20,13 @@ Top section start
     background-color: #161616;
     border-radius: 30px;
     height: 646px;
-   
+
 }
-.top-section{
+
+.top-section {
     width: 45%;
 }
+
 .top-contant {
     margin-left: 80px;
     display: flex;
@@ -55,28 +61,34 @@ Top section start
     margin-top: 15px;
 }
 
-.top-btn button i{
+.top-btn button i {
     margin-left: 10px;
 }
+
 .top-img {
     margin-right: 60px;
     display: flex;
     align-items: flex-end;
 
 }
-.top-img img{
+
+.top-img img {
     width: 100%;
     height: 90%;
 }
+
 /* ===============
 Main section start 
 ================== */
-.main-contant{
+.main-contant {
     display: flex;
     align-items: flex-start;
     column-gap: 24px;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
-.contant-nav{
+
+.contant-nav {
     width: 250px;
     display: flex;
     flex-direction: column;
@@ -85,7 +97,8 @@ Main section start
     padding: 30px;
     border-radius: 10px;
 }
- .contant-nav a{
+
+.contant-nav a {
     font-size: 20px;
     font-weight: 500;
     line-height: 30px;
@@ -97,48 +110,108 @@ Main section start
     padding: 17px;
     border-radius: 10px;
     border: none;
- }
- .contant-nav .active-nav{
+}
+
+.contant-nav .active-nav {
     color: #FFFFFF;
     background-color: rgb(11, 153, 72);
- }
- #blogs{
+}
+
+#blogs {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     row-gap: 24px;
     column-gap: 24px;
- }
- .blog{
+}
+
+.blog {
     border: 1px solid lightgray;
-    border-radius: 5px;
- }
- .blog-img img{
+    border-radius: 10px;
+}
+
+.blog-img img {
     width: 100%;
-    border-top-right-radius:5px ;
-    border-top-left-radius:5px ;
- }
- .blog-info{
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+
+.blog-info {
     padding: 20px;
     margin: 0px;
- }
- .blog-info> span{
+}
+
+.blog-info>span {
     font-size: 14px;
     font-weight: 500;
     border: 1px solid #161616;
     border-radius: 5px;
     margin-top: 0px;
     padding: 4px 16px;
- }
-.blog-title{
-font-weight: 600;
-font-size: 16px;
-line-height: 27px;
-
-color: #161616;
 }
-.blog-data{
-    width: 50%;
+
+.blog-title {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 27px;
+
+    color: #161616;
+}
+
+.blog-data {
+    width: 75%;
     display: flex;
     justify-content: space-between;
-    
+    color: #161616ab;
+
+}
+
+.blog-data span {
+    margin-left: 10px;
+}
+
+/*========== footer start=========== */
+footer {
+    width: 80%;
+    background-color: #161616;
+    padding: 10%;
+}
+
+.fotter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 50px;
+}
+
+hr {
+    width: 90%;
+    border: 1px solid grey;
+}
+
+.site-name h2 {
+    margin: 0px;
+    color: #FFFFFF;
+    font-size: 40px;
+    font-weight: 600;
+}
+
+.site-name {
+    width: 40%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.site-name i {
+    color: gray;
+    font-size: 24px;
+}
+
+.footer-menu {
+    display: flex;
+    column-gap: 30px;
+}
+
+.footer-menu a {
+    color: #B9B9B9;
+    text-decoration: none;
 }
