--- a/styles/style.css
+++ b/styles/style.css
@@ -204,8 +204,12 @@ hr {
     display: flex;
     justify-content: space-evenly;
 }
-
-.site-name i {
+.social{
+    width: 40%;
+    display: flex;
+    justify-content: space-around;
+}
+.social a {
     color: gray;
     font-size: 24px;
 }
@@ -250,4 +254,71 @@ color: #161616;
 }
 .match-info span{
     font-weight: 400;
+}
+
+/*==================== Responsive Media Quary ===================*/
+
+@media screen and (max-width:576px) {
+    
+    main{
+        margin: 20px 5%;
+    }
+    .top{
+        flex-direction: column;
+    }
+    .top-contant{
+        margin: auto;
+    }
+    .top-section{
+        width: 80%;
+        align-items: center;
+    }
+    .top-heading {
+        font-size: 22px;
+        line-height: 33px;
+        text-align: center;
+    }
+    .top-text{
+        font-size: 14px;
+        width: 100%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        
+    }
+    .top-img{
+        padding-left: 5%;
+        padding-right: 6%;
+        width: 90%;
+        flex-direction: column;
+        justify-content: flex-end;
+    }
+    .main-contant{
+        flex-direction: column;
+        align-items: center;
+        row-gap: 50px;
+    }
+    #blogs , #up-match{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    
+    .site-name h2{
+        font-size: 24px;
+    }
+    .social{
+        width: 80%;
+        justify-content: space-evenly;
+    }
+    .footer-menu{
+        flex-direction: column;
+        align-items: center;
+        row-gap: 10px;
+    }
+   
+     
+}
+@media screen and (min-width:577px) and (max-width:992px) {
+    main{
+        background-color: black;
+    }
 }
